--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../lecture-notes.sty/lecture-notes}
+\usepackage{../lecture-notes/notes}
 \usepackage{amsmath}
 \usepackage{relsize}
 \newcommand*\thetitle{CAMC and NHD}
