--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../lecture-notes.sty/lecture-notes}
+\usepackage{../lecture-notes/notes}
 \newcommand*\thetitle{Lines of Code (LoC)}
 \begin{document}
 
