--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../lecture-notes.sty/lecture-notes}
+\usepackage{../lecture-notes/notes}
 \usepackage{svg}
 \newcommand*\thetitle{Cognitive Complexity}
 \begin{document}
