--- a/19-comments-density/19-comments-density.tex
+++ b/19-comments-density/19-comments-density.tex
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../lecture-notes.sty/lecture-notes}
+\usepackage{../lecture-notes/notes}
 \newcommand*\thetitle{Comments Density}
 \begin{document}
 
