--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -21,7 +21,7 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../lecture-notes.sty/lecture-notes}
+\usepackage{../lecture-notes/notes}
 \newcommand*\thetitle{Code Style}
 \begin{document}
 
