--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -58,9 +58,20 @@
 {\scriptsize Source: \url{https://nordicapis.com/the-difference-between-tight-coupling-and-loose-coupling/}\par}}
 
 \lnQuote
+  {david-west}
+  {Collaborations always involve some degree of coupling between both parties of the collaboration, so the \ul{number of collaborations} should be minimized to the greatest extent possible.}
+  {west2004object}
+
+\lnQuote
   {robert-martin}
   {The lack of coupling means that the elements of our system are \ul{better isolated} from each other and from change. This isolation makes it easier to \ul{understand} each element of the system.}
   {martin2008clean}
+
+\lnQuote
+  [Steve Freeman]
+  {steve-freeman}
+  {Elements are coupled if a change in one \ul{forces} a change in the other. Loosely coupled features are easier to \ul{maintain}.}
+  {freeman2009growing}
 
 \lnQuote
   {../06-coupling/cbo}
