--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -58,6 +58,12 @@
 {\scriptsize Source: \url{https://nordicapis.com/the-difference-between-tight-coupling-and-loose-coupling/}\par}}
 
 \lnQuote
+  [Grady Booch]
+  {grady-booch}
+  {However, there is tension between the concepts of coupling and inheritance because inheritance introduces significant coupling. On the one hand, weakly coupled classes are desirable; on the other hand, inheritance---which \ul{tightly couples} superclasses and their subclasses---helps us to exploit the commonality among abstractions.}
+  {booch1994object}
+
+\lnQuote
   {david-west}
   {Collaborations always involve some degree of coupling between both parties of the collaboration, so the \ul{number of collaborations} should be minimized to the greatest extent possible.}
   {west2004object}
