--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -37,12 +37,10 @@
 \pptPic{.8}{cohesion-1.png}\par
 {\scriptsize Source: \url{https://bootcamp.uxdesign.cc/why-product-development-and-design-needs-cohesion-coupling-87731c84aaa7}\par}}
 
-% \lnPitch{\pptQuote{neal-ford.jpg}{Architecture is the tension between coupling and cohesion.}{\href{https://nealford.com/}{Neal Ford}, ThoughtWorks}}
-
 \lnQuote
   [Neal Ford]
   {neal-ford}
-  {Architecture is the tension between coupling and cohesion.}
+  {Architecture is the \ul{tension} between coupling and cohesion.}
   {ford2024}
 
 \lnQuote
@@ -366,5 +364,14 @@ class Rectangle {
 \item \href{https://pypi.org/project/lcom/}{lcom} for Python
 \item \href{https://github.com/yahoojapan/lcom4go}{lcom4go} for Go
 \end{itemize}}
+
+\plush{
+  \pptBanner{jPeek}
+  \begin{multicols}{2}
+  \includegraphics[width=6em]{jpeek-logo.png}\par
+  \url{https://www.jpeek.org}
+  \par\columnbreak\par
+  Motivation: ``Class cohesion is considered as one of most important object-oriented software attributes. There are over 30 different cohesion metrics invented so far, but almost none of them have calculators available. We want to create such a tool that will make it possible to analyze code quality more or less formally.''
+  \end{multicols}}
 
 \end{document}
