--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -35,6 +35,12 @@
   {yourdon1979structured}
 
 \lnQuote
+  [Andrew Hunt]
+  {andy-hunt}
+  {We want to design components that are self-contained: independent, and with a \ul{single}, well-defined purpose.}
+  {hunt1999pragmatic}
+
+\lnQuote
   [James M. Bieman]
   {james-bieman}
   {We define two measures of class cohesion based on the \ul{direct} and \ul{indirect} connections of method pairs: TCC and LCC.}
@@ -110,7 +116,8 @@ var file = {
 \begin{multicols}{2}
 \includegraphics[width=.9\columnwidth]{graphs.png}
 \par\columnbreak\par
-``Our results show that the classes that are heavily \ul{reused} via inheritance exhibit \ul{lower cohesion}. We expected to find that the most reused classes would be the most cohesive ones.'' --- James M. Bieman and Byung-Kyoo Kang
+``Our results show that the classes that are heavily \ul{reused} via inheritance exhibit \ul{lower cohesion}. We expected to find that the most reused classes would be the most cohesive ones.''\par
+\lnSource{bieman1995cohesion}
 \end{multicols}
 \plush{}
 
