--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -29,6 +29,11 @@
 \plush{\lnTitlePage{8}{24}{JOKxjpAglFU}}
 
 \lnQuote
+  {socrates}
+  {\textbf{Socrates}: I am a lover of these processes of \ul{division} and \ul{bringing together}, as aids to speech and thought; and if I think any other man is able to see things that can naturally be collected into one and divided into many, him I follow after and walk in his footsteps as if he were a god.}
+  {plato370}
+
+\lnQuote
   [Edward Yourdon]
   {edward-yourdon}
   {Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}
