--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -31,7 +31,7 @@
 
 \lnQuote
   {philippe-kruchten}
-  {Without a well-defined process, your development team will develop in an ad hoc manner, with success relying on the \ul{heroic efforts} of a few dedicated individual contributors. This is not a sustainable condition.}
+  {Without a well-defined process, your development team will develop in an \textit{ad hoc} manner, with success relying on the \ul{heroic efforts} of a few dedicated individual contributors. This is not a sustainable condition.}
   {kruchten2004rational}
 
 \lnPitch{
