--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -36,7 +36,8 @@
 
 \lnPitch{
   \pptBanner{Rational Unified Process (RUP)}
-  \pptPic{.7}{rup.png}}
+  \pptPic{.6}{rup.png}\par
+  \lnSource{shuja2007ibm}}
 
 \pptBanner{Decoupling via Interfaces (in Java)}
 \begin{pptWide}{2}
