--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -75,14 +75,14 @@ void main(Shape s)
   {bansiya1999class}
 
 \plush{\begin{pptWide}{2}
-\includegraphics[width=\columnwidth]{nhd-1.png}\par
-\(k\) --- total number of methods\par
-\(l\) --- total number of types\par
-\(\texttt{CAMC} = \frac{1}{k \times l} \times \mathlarger{\sum}_{i=1}^{k} \mathlarger{\sum}_{j=1}^{l} o_{ij}\)\par
-\par\columnbreak\par
-\includegraphics[width=.9\columnwidth]{nhd-2.png}\par
-\lnSource{bansiya1999class}
-\end{pptWide}}
+  \includegraphics[width=\columnwidth]{nhd-1.png}\par
+  \(k\) --- total number of methods\par
+  \(l\) --- total number of types\par
+  \(\texttt{CAMC} = \frac{1}{k \times l} \times \mathlarger{\sum}_{i=1}^{k} \mathlarger{\sum}_{j=1}^{l} o_{ij}\)\par
+  \par\columnbreak\par
+  \includegraphics[width=.9\columnwidth]{nhd-2.png}\par
+  \lnSource{bansiya1999class}
+  \end{pptWide}}
 
 \lnQuote
   [Steve Counsell]
@@ -91,14 +91,14 @@ void main(Shape s)
   {counsell2006interpretation}
 
 \plush{\begin{pptWide}{2}
-\includegraphics[width=\columnwidth]{nhd-1.png}\par
-\(k\) --- total number of methods\par
-\(l\) --- total number of types\par
-\(\texttt{NHD} = \frac{2}{l \times k \times (k - 1)} \times \mathlarger{\sum}_{j=1}^{k-1} \mathlarger{\sum}_{i=j+1}^{k} a_{ij}\)\par
-\par\columnbreak\par
-\includegraphics[width=.9\columnwidth]{nhd-2.png}\par
-\includegraphics[width=.9\columnwidth]{nhd-3.png}\par
-\end{pptWide}}
+  \includegraphics[width=\columnwidth]{nhd-1.png}\par
+  \(k\) --- total number of methods\par
+  \(l\) --- total number of types\par
+  \(\texttt{NHD} = \frac{2}{l \times k \times (k - 1)} \times \mathlarger{\sum}_{j=1}^{k-1} \mathlarger{\sum}_{i=j+1}^{k} a_{ij}\)\par
+  \par\columnbreak\par
+  \includegraphics[width=.9\columnwidth]{nhd-2.png}\par
+  \includegraphics[width=.9\columnwidth]{nhd-3.png}\par
+  \end{pptWide}}
 
 \lnQuote
   [Robert C. Martin]
@@ -106,7 +106,7 @@ void main(Shape s)
   {Classes that have 'fat' interfaces are classes whose interfaces are not \ul{cohesive}. In other words, the interfaces of the class can be broken up into groups of methods.}
   {martin2002}
 
-\pptBanner{InputStream in Java}
+\pptBanner{\texttt{InputStream} in Java 1.0}
 \begin{pptWide}{2}
 \textcolor{red}{Bad}:
 {\scriptsize\begin{ffcode}
@@ -148,18 +148,18 @@ class OneByteStream
 
 
 \lnPitch{
-\pptBanner{Also Known As...}
-\begin{multicols}{2}
-\begin{itemize}
-  \item ``interface'' in Java
-  \item ``protocol'' in Objective-C
-  \item ``interface'' in C\#
-  \item ``abstract class'' in C++
-  \item absent in Python
-  \item absent in JavaScript
-  \item ``interface'' in Go
-  \item ``trait'' in Rust
-\end{itemize}\end{multicols}\par
-\lnSource{bugayenko2020blog0219}}
+  \pptBanner{Also Known As...}
+  \begin{multicols}{2}
+  \begin{itemize}
+    \item ``interface'' in Java
+    \item ``protocol'' in Objective-C
+    \item ``interface'' in C\#
+    \item ``abstract class'' in C++
+    \item absent in Python
+    \item absent in JavaScript
+    \item ``interface'' in Go
+    \item ``trait'' in Rust
+  \end{itemize}\end{multicols}\par
+  \lnSource{bugayenko2020blog0219}}
 
 \end{document}
