--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -162,4 +162,9 @@ class OneByteStream
   \end{itemize}\end{multicols}\par
   \lnSource{bugayenko2020blog0219}}
 
+\lnPitch{
+  \pptBanner{Correlation between cohesion metrics}
+  \pptPic{.65}{metrics-correlation.png}\par
+  \lnSource{alexandrov2021validating}}
+
 \end{document}
