--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -200,7 +200,7 @@ class Material {
   }
 }
 
-class Book extends Material {
+class Book (*@\textcolor{orange}{extends Material}@*) {
   public String title() {
     return "David";
   }
