--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -112,7 +112,7 @@ class Book extends Material {
 \end{ffcode}
 }
 \par\columnbreak\par
-\(\texttt{MIF} = 1/2\)\par
+\(\texttt{MIF}_\texttt{Book} = 1/2\)\par
 ``MIF is defined as the ratio of the sum of the \ul{inherited} methods in all classes of
 the system under consideration to the total number of available methods
 (locally defined plus inherited) for all classes.''
@@ -132,7 +132,7 @@ class Book extends Material {
 \end{ffcode}
 }
 \par\columnbreak\par
-\(\texttt{AIF} = 1/2\)\par
+\(\texttt{AIF}_\texttt{Book} = 1/2\)\par
 ``AIF is defined as the ratio of the sum of \ul{inherited} attributes in all classes of
 the system under consideration to the total number of available attributes
 (locally defined plus inherited) for all classes.''
@@ -156,7 +156,7 @@ class Book extends Material {
 \end{ffcode}
 }
 \par\columnbreak\par
-\(\texttt{PF} = 0/1\)\par
+\(\texttt{PF}_\texttt{Book} = 0/1\)\par
 ``PF is the number of methods that \ul{redefine} inherited methods, divided by the
 maximum number of possible distinct polymorphic situations.''
 \end{multicols}
