--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -90,7 +90,7 @@ var t = b.title();
 \end{ffcode}
 }
 \par\columnbreak\par
-\(\texttt{AHF} = 1/2\)\par
+\(\texttt{AHF}_\texttt{Book} = 1/2\)\par
 ``AHF is defined as the ratio of the sum of the \ul{invisibilities} of all attributes
 defined in all classes to the total number of attributes defined in the system
 under consideration.''
