--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -64,7 +64,7 @@ class Book {
 \end{ffcode}
 }
 \par\columnbreak\par
-\(\texttt{MHF} = 1/2\)\par
+\(\texttt{MHF}_\texttt{Book} = 1/2\)\par
 ``MHF is defined as the ratio of the sum of the \ul{invisibilities} of all methods
 defined in all classes to the total number of methods defined in the system
 under consideration.''
