--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -252,6 +252,18 @@ class Book
 \end{multicols}
 \plush{}
 
+\lnPitch{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{correlation.png}
+  \par\columnbreak\par
+  Table shows very clearly that linear Pearson's correlations
+  between the studied OO metrics are, in general, very weak.
+  We conclude that these metrics are mostly statistically
+  independent and, therefore, do not capture a great deal
+  of redundant information.
+  \lnSource{basili1996validation}
+  \end{multicols}}
+
 \lnQuote
   {../10-object-dimensions/book}
   {A small number of classes may be responsible for a large number of the methods that executed in an application, and that if testing effort were concentrated on these outlier classes, a bulk of the dynamic behavior of the object oriented systems can be checked for customer acceptance.}
