--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -162,6 +162,17 @@ maximum number of possible distinct polymorphic situations.''
 \end{multicols}
 \plush{}
 
+\lnPitch{
+  \begin{multicols}{2}
+  \includegraphics[width=\linewidth]{nine.png}
+  \par\columnbreak\par
+  ``Results show that the metrics could be used to provide an overall assessment
+  of a software system, which may be helpful to managers of software development
+  projects. However, further empirical studies are needed before these
+  results can be generalised.''
+  \lnSource{harrison1998evaluation}
+  \end{multicols}}
+
 \lnQuote
   [Chris F. Kemerer]
   {chris-kemerer}
@@ -256,11 +267,11 @@ class Book
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{correlation.png}
   \par\columnbreak\par
-  Table shows very clearly that linear Pearson's correlations
+  ``Table shows very clearly that linear Pearson's correlations
   between the studied OO metrics are, in general, very weak.
   We conclude that these metrics are mostly statistically
   independent and, therefore, do not capture a great deal
-  of redundant information.
+  of redundant information.''
   \lnSource{basili1996validation}
   \end{multicols}}
 
