--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -33,6 +33,12 @@
 \plush{\lnTitlePage{11}{24}{ynPTEzDTutc}}
 
 \lnQuote
+  [Edward Yourdon]
+  {edward-yourdon}
+  {Whenever possible, we wish to maximize \ul{fan-in} during the design process. Fan-in is the \textit{raison d'\^{e}tre} of modularity: Each instance of multiple fan-in means that some \ul{duplicate code} has been avoided.}
+  {yourdon1979structured}
+
+\lnQuote
   [Robert C. Martin]
   {robert-martin}
   {Duplication is the \ul{primary enemy} of a well-designed system.}
