--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -39,6 +39,12 @@
   {yourdon1979structured}
 
 \lnQuote
+  [Bertrand Meyer]
+  {bertrand-meyer}
+  {The challenge of reusability is to avoid \ul{unneeded duplication} of software by taking advantage of the commonality between variants. If identical or near-identical fragments appear in different modules, it will be difficult to \ul{guarantee} their integrity and to ensure that changes or corrections \ul{get propagated} to all the needed places.}
+  {meyer1988object}
+
+\lnQuote
   [Robert C. Martin]
   {robert-martin}
   {Duplication is the \ul{primary enemy} of a well-designed system.}
