--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -156,12 +156,11 @@ void sayHello(int id) {
   {Code-clone analysis is a good vehicle to \ul{quantitatively} understand the differences and improvements between two versions of the same software system}
   {livieri2007}
 
-{\pptBanner{How many code clone detections tools are out there?}
-  \lnQuote
+\lnQuote
   [Wasi Haider Butt]
   {wasi-haider-butt}
   {We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}
-  {ain2019}}
+  {ain2019}
 
 \pptBanner{Type-1: Exact Clone}
 \begin{multicols}{2}
