--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -45,6 +45,11 @@
   {meyer1988object}
 
 \lnQuote
+  {steve-mcconnell}
+  {With code in one place, you save the space that would have been used by duplicated code. Modifications will be easier because you'll need to modify the code in \ul{only one location}. The code will be more reliable because you'll have to check only one place to ensure that the code is right.}
+  {mcconnell2004code}
+
+\lnQuote
   [Robert C. Martin]
   {robert-martin}
   {Duplication is the \ul{primary enemy} of a well-designed system.}
