--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -45,6 +45,12 @@
   {meyer1988object}
 
 \lnQuote
+  [Kent Beck]
+  {kent-beck}
+  {You must find a way to eliminate all the duplicated logic in the system. This is the hardest part of design for me, because you first have to find the duplication, and then you have to find a way to eliminate it. Eliminating duplication naturally leads you to create \ul{lots of little objects} and lots of little methods, because otherwise there will inevitably be duplication.}
+  {beck2000extreme}
+
+\lnQuote
   {steve-mcconnell}
   {With code in one place, you save the space that would have been used by duplicated code. Modifications will be easier because you'll need to modify the code in \ul{only one location}. The code will be more reliable because you'll have to check only one place to ensure that the code is right.}
   {mcconnell2004code}
@@ -261,7 +267,7 @@ More than one code segments that are functionally similar but implemented by dif
     \item Using ``tree matching''
     \item Using Program Dependency Graphs (PDG)
     \item Using Machine Learning (ML)
-    \item Large Language Models (LLM)
+    \item \textcolor{orange}{Using Large Language Models (LLM)}
   \end{enumerate}}
 
 \lnQuote
